fixed toolbar misalignment in IE

--- a/modulesUI/ckeditor/css/toolbar.css
+++ b/modulesUI/ckeditor/css/toolbar.css
@@ -50,7 +50,7 @@ body {
     position: fixed !important;
     width: 100%;
     bottom: 0 !important;
-    right: 0 !important;
+    left: 0 !important;
     height: 55px;
     z-index: 9999999 !important;
     text-align: left;
